fixed padding of horizontal scroll

--- a/css/horizontalscroll.css
+++ b/css/horizontalscroll.css
@@ -27,7 +27,6 @@
   display:block;
   margin: 0 ;
   margin-bottom: 0px;
-  padding:20px;
 }
 
 #container .box {
